# Project_ATAD

./: Cargo.toml  README.md
data/: finance.db
src/: cli.rs  main.rs
src/core/: finance_app.rs  mod.rs  transaction_service.rs
src/domain/: mod.rs  transaction.rs
src/persistence/: connection_provider.rs  mod.rs  transaction_repository.rs
